--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+
+<code>A faire exo dans le ficheir todo.txt</code>
+
+
+<div data-controller="hello">
+  <input type="text">
+  <button>Greet</button>
+</div>
