--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,3 +9,7 @@
   <button data-action="click->hello#greet">greet</button>
   <div data-hello-target="result"></div>
 </div>
+
+<%= @clientsnb %>
+
+<%= link_to "Pages clients", clients_path, class: "btn btn-primary" %>
