--- a/app/assets/stylesheets/components/_titres.scss
+++ b/app/assets/stylesheets/components/_titres.scss
@@ -1,10 +1,11 @@
 h1 {
     font-size: 2rem;
     font-weight: bold;
-    color: rgb(61, 4, 115);
+    color: $primary;
     background-color: #2d93f9;
     padding: 10px;
 }
+
 h2 {
     font-size: 1.5rem;
     font-weight: bold;
