--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
   <div class="container-fluid">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "logo.jpg" %>
+    <%= link_to root_path, class: "navbar-brand d-flex align-items-center" do %>
+      <i class="bi bi-code-square me-2 fs-4"></i>
+      <span class="fw-bold">MAST2 Demo</span>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,25 +10,55 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <% if user_signed_in? %>
-
-          <li class="nav-item dropdown">
-          <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= image_tag "avatar.png", class: "avatar", alt: "dropdown menu" %>
-          </a>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </div>
-          </li>
-        <% else %>
           <li class="nav-item">
-            <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+            <%= link_to root_path, class: "nav-link #{'active' if current_page?(root_path)}" do %>
+              <i class="bi bi-house-door me-1"></i> Accueil
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to clients_path, class: "nav-link #{'active' if current_page?(clients_path)}" do %>
+              <i class="bi bi-people me-1"></i> Clients
+            <% end %>
+          </li>
+          <li class="nav-item">
+            <%= link_to users_path, class: "nav-link #{'active' if current_page?(users_path)}" do %>
+              <i class="bi bi-person-gear me-1"></i> Utilisateurs
+            <% end %>
           </li>
         <% end %>
       </ul>
+
+      <div class="d-flex align-items-center">
+        <% if user_signed_in? %>
+          <span class="navbar-text text-light me-3">
+            <i class="bi bi-person-circle me-1"></i>
+            <%= current_user.email %>
+          </span>
+          <div class="dropdown">
+            <button class="btn btn-outline-light btn-sm dropdown-toggle" type="button" id="userDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+              <i class="bi bi-gear"></i>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+              <li>
+                <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+                  <i class="bi bi-person-circle me-2"></i> Mon profil
+                <% end %>
+              </li>
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <%= link_to destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item text-danger" do %>
+                  <i class="bi bi-box-arrow-right me-2"></i> Déconnexion
+                <% end %>
+                
+              </li>
+            </ul>
+          </div>
+        <% else %>
+          <%= link_to "Connexion", new_user_session_path, class: "btn btn-outline-light btn-sm" %>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
+</nav>
